Realizando algumas melhorias no código e limpeza de imports não utilizados