@@ -12,10 +12,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 public class DependentServiceImpl implements DependentService {
@@ -36,7 +34,7 @@ public class DependentServiceImpl implements DependentService {
         } else {
             list = dependentRepository.findByNameIgnoreCaseContainingOrDateOfBirthIgnoreCaseContainingOrGenderIgnoreCaseContainingOrParentageIgnoreCaseContaining(text, text, text, text);
         }
-        return list.stream().map(DependentDTO::new).collect(Collectors.toList());
+        return list.stream().map(DependentDTO::new).toList();
     }
 
     @Override
